# block-insert

./: README.md  block_extract.py  block_insert.py  main.py  pyproject.toml  test.txt
examples/: corepost.py
lineblocks/: block_extract.py  block_insert.py
scripts/: block_insert.py
tests/: conftest.py  test_all.py  test_basic.py  test_block_extract.py  test_indent.py
tests/expected/: basic.py  indent_3.md  not_found.md
tests/mutable/: b1.py  b2.py  b3.py  b4.py  b5.py
tests/outputs/: extract_indent_2.md  indent_1.md  indent_2.md  not_found1.md
tests/sources/: basic.py  extract_indent_1.md  extract_indent_2.md  extract_last_line.md  extract_missing_end.md  indent_1.md  indent_2.md  indent_3.md  not_found.md  not_found1.md
tests/testdata/: indented.md
tests/testdata/mutable/: insertion.md  insertion.py
